--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.28.2",
     "bash": "0.0.1",
     "fastify": "file:node_modules/fastify",
-    "fastify-mongodb": "^2.0.1"
+    "fastify-jwt": "^3.0.0",
+    "fastify-mongodb": "^2.0.1",
+    "http-errors": "^1.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
